--- a/video.html
+++ b/video.html
@@ -45,6 +45,7 @@
       <p id="tips"></p>
       <p id="container"></p>
     </div>
+    <div class="button"><a id="button" href="finish.html" class="btn btn-large">finish</a></div>
   </div>
 </div>
 </body>
