--- a/finish.html
+++ b/finish.html
@@ -11,20 +11,37 @@
 </head>
 <body>
   <div id="content">
-    <a href="recommend.html"><p>
-    <span>Kong Pao Chicken</span>
-    <img
-    src="images/gongbao.jpg"
-    class="img-polaroid" width="300"/>
-    </p>
+    <a href="recommend.html">
+    <div class="item">
+      <h1>Kong Pao Chicken</h1>
+      <img src="images/gongbao.jpg" class="img-polaroid" width="90%"/>
+      <div class="tags">
+        <span>Chicken</span>
+        <span>Cucumber</span>
+        <span>Peanut</span>
+        <span>Garlic</span>
+        <span class="extra">Lemon</span>
+      </div>
+      <div class="time">
+        Estimated Total Time - 40 min
+      </div>
+    </div>
     </a>
     <a href="recommend.html">
-    <p>
-    <span>Kong Pao Chicken</span>
-    <img
-    src="images/gongbao.jpg"
-    class="img-polaroid" width="300"/>
-    </p>
+    <div class="item item2">
+      <h1>Kong Pao Chicken</h1>
+      <img src="images/gongbao.jpg" class="img-polaroid" width="90%"/>
+      <div class="tags">
+        <span>Chicken</span>
+        <span>Cucumber</span>
+        <span>Peanut</span>
+        <span>Garlic</span>
+        <span class="extra">Lemon</span>
+      </div>
+      <div class="time">
+        Estimated Total Time - 40 min
+      </div>
+    </div>
     </a>
   </div>
 </body>
