--- a/recommend.html
+++ b/recommend.html
@@ -11,12 +11,34 @@
 </head>
 <body>
   <div id="content">
-    <div >
-      <img src="images/gongbao.jpg" width="600"/>
-      <div style="float:left;">宫保鸡丁是汉族传统经典名菜，属于川菜中最具代表性的菜品之一。创始人为贵州织金人时任四川总督丁宝桢，在任四川总督时创制该菜，流传至今。由于一般认为宫保鸡丁正式创制是丁宝桢任四川总督之时，在蜀地创制并流传开，且其后至今的漫长岁月中，宫保鸡丁主要通过市场巨大的川菜馆作为载体走向大江南北及海外，声名远播，因此宫保鸡丁在菜系定位属于川菜系，同时由于丁宝桢为贵州人，所以宫保鸡丁也可被认为是贵州菜系即黔菜系。</div>
+    <div class="pic">
+      <img src="images/gongbao.jpg"/>
     </div>
-       <div class="button" style="text-align:center;"><a id="button"
-    href="startcooking.html" class="btn btn-large">start cooking</a></div> 
+    <div class="info">
+      <h1>Kong Pao Chicken</h1>
+      <div class="tags">
+        <b>Ingredients:</b>
+        <span>Chicken</span>
+        <span>Cucumber</span>
+        <span>Peanut</span>
+        <span>Garlic</span>
+      </div>
+      <div class="tags">
+        <b>Sauce:</b>
+        <span>Peaunt oi</span>
+        <span>sugar</span>
+      </div>
+      <div class="time">
+        Total Time - 40 min<br/>
+        Prep: 20 min<br/>
+        Inactive: 10 min<br/>
+        Cook:  10 min<br/>
+        Yield: 2 Servings - 
+        Level: Intermediate - 
+        Vivas  22:16:19<a id="button"
+    href="startcooking.html" class="btn btn-large">start cooking</a>
+      </div>
+    </div>
   </div>
 </body>
 </html>
