--- a/startcooking.html
+++ b/startcooking.html
@@ -7,26 +7,22 @@
   <title>project</title>
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="stylesheet/recommend.css"/>
+  <link rel="stylesheet" href="stylesheet/startcooking.css"/>
 </head>
 <body>
   <div id="content">
     <h1>Kong Pao Chicken Steps</h1>
 <table class="table table-striped">
-  <tr><td>step1
-    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</td><td>5 min</td></tr>
-<tr><td>step2 XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</td><td>5 min</td></tr>
+  <tr><td>Step 1 － In a non-reactive bowl, prepare the marinade. Combine the rice wine, peanut oil, soy sauce, salt and cornstarch. Stir in the chicken pieces and refrigerate for 20 to 30 minutes.</td></tr>
+<tr><td>Step 2 － In a small bowl, combine the ingredients for the sauce. Set aside.</td></tr>
 
-<tr><td>step3 XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</td><td>5 min</td></tr>
+<tr><td>Step 3 － Over high heat, in a wok, bring the peanut oil to almost smoking temperature. Stir-fry the chilies, ginger, garlic and white part of the green onions for 30 to 40 seconds, or until the chilies turn dark. Add the chicken and stir-fry for 1 to 2 minutes, until golden in color.</td></tr>
 
-<tr><td>step4 XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</td><td>5 min</td></tr>
-
-<tr><td>step5 XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</td><td>5 min</td></tr>
+<tr><td>Step 4 － Add the sauce and bring to a boil. Add the peanuts. Thicken with the slurry and continue to cook until glossy. Transfer to a serving plate and garnish with julienne green onions.</td></tr>
 
 </table>
-       <div class="button" style="text-align:center;"><a id="button"
+       <div class="button"><a id="button"
 href="index.html" class="btn btn-large">return</a></div> 
-
   </div>
 </body>
 </html>
