--- a/index.html
+++ b/index.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Basic QR-code reader example</title>
   <meta name="description" content="">
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
-  <title>project</title>
-  <link rel="stylesheet" href="stylesheet/index.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="stylesheet/styles.css">
+  <script src="javascript/jquery.min.js"></script>
+  <script src="javascript/photobooth.js"></script>
+  <script type="text/javascript" src="javascript/qr/grid.js"></script>
+  <script type="text/javascript" src="javascript/qr/version.js"></script>
+  <script type="text/javascript" src="javascript/qr/detector.js"></script>
+  <script type="text/javascript" src="javascript/qr/formatinf.js"></script>
+  <script type="text/javascript" src="javascript/qr/errorlevel.js"></script>
+  <script type="text/javascript" src="javascript/qr/bitmat.js"></script>
+  <script type="text/javascript" src="javascript/qr/datablock.js"></script>
+  <script type="text/javascript" src="javascript/qr/bmparser.js"></script>
+  <script type="text/javascript" src="javascript/qr/datamask.js"></script>
+  <script type="text/javascript" src="javascript/qr/rsdecoder.js"></script>
+  <script type="text/javascript" src="javascript/qr/gf256poly.js"></script>
+  <script type="text/javascript" src="javascript/qr/gf256.js"></script>
+  <script type="text/javascript" src="javascript/qr/decoder.js"></script>
+  <script type="text/javascript" src="javascript/qr/qrcode.js"></script>
+  <script type="text/javascript" src="javascript/qr/findpat.js"></script>
+  <script type="text/javascript" src="javascript/qr/alignpat.js"></script>
+  <script type="text/javascript" src="javascript/qr/databr.js"></script>
+  <script src="javascript/effects.js"></script>
 </head>
 <body>
-  <div id="content">
-    <img src="images/webcoverX.jpg" width="600"/>
-    <p id ="start"><a href="video.html">Start</a></p>
+<div class="pageWrapper">
+  <div class="boxWrapper">
+    <div id="example"></div>
   </div>
+  <div class="button">
+    <a id="button" class="btn btn-large btn-success">Scan QR code</a>
+  </div>
+  <div class="auto">
+    <div id="hiddenImg"></div>
+    <div id="qrContent">
+      That's all you have, ingredients:
+      <p id="tips"></p>
+      <p id="container"></p>
+    </div>
+    <div class="button"><a id="button" href="finish.html" class="btn btn-large">finish</a></div>
+  </div>
+</div>
 </body>
-<script src="javascript/index.js"></script>
 </html>
